--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-path name="external_files" path="."/>
+    <!-- App-private external storage (getExternalFilesDir) -->
+    <external-files-path name="external_files" path="."/>
     <external-cache-path name="external_cache" path="."/>
+    <!-- Internal app files/cache -->
     <files-path name="files" path="."/>
     <cache-path name="cache" path="."/>
 </paths>
